update FedRAMP compliance evidence and site URL
- Add formal introduction referencing Controls Requirements Project
- Update base URL to authifi.pages.dev
- Use specific anchor links to relevant sections
- Streamline to fewer, more targeted compliance links

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Authifi Documentation
 site_description: Public documentation for the Authifi identity and access management platform
-site_url: https://authifi-docs.pages.dev
+site_url: https://authifi.pages.dev
 
 theme:
   name: material
