docs: add privileged-access-summary and standardize admin scope naming
- Add new privileged-access-summary.md with consolidated privileged access reference
- Replace ADMIN_SCOPE.* format with admin::* format across all documentation
- Add naming convention notes explaining that admin:: prefix is a convention,
  but isPrivileged flag determines privileged status
- Integrate new document into navigation and cross-references

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,6 +55,7 @@ nav:
   - Authorization:
     - Overview: authorization/authorization.md
     - Admin Roles: authorization/admin-roles.md
+    - Privileged Access Summary: authorization/privileged-access-summary.md
     - Super Admin Access: authorization/super-admin-access.md
     - Default Application User Groups: authorization/default-application-user-groups.md
     - Delegating Tenant Management: authorization/delegating-tenant-management-to-a-shared-tenant.md
